--- a/Part1.tex
+++ b/Part1.tex
@@ -39,6 +39,7 @@
 \usetikzlibrary{decorations.pathreplacing} % for curly braces
 \usetikzlibrary {decorations.markings,shapes.arrows}
 \usetikzlibrary{patterns}
+\usepackage{tkz-euclide}
 \usepackage{tikz-3dplot}
 
 %\usepackage[margin=0cm,nohead]{geometry}
@@ -100,22 +101,31 @@
 
 %**************************** Document itself *******************************
 \author{Bernard Carrette}
-\gradyear{1979}
+%\gradyear{1979}
 \title{Tensor Calculus\\J.L. Synge and A.Schild (Dover Publication)\\ Solutions to exercises\\Part \RomanNumeralCaps{1}\\
 Chapters \RomanNumeralCaps{1} to \RomanNumeralCaps{4}}
 \begin{document}
 \maketitle
+\begin{figure}%                 use [hb] only if necceccary!
+  \centering
+  \includegraphics[width=10cm]{zebook.jpg}
+  \caption{My copy, falling apart...}
+  \label{fig:test}
+\end{figure}
 
 \section*{Remarks and warnings}
 You're welcome to use these notes, but they may contain errors, so proceed with caution : I graduated in 1979, went straight in the industry (where I didn't have to use fancy maths), and picked mathematics and physics again after I retired, so my mathematics got rusty  for sure. If you do find an error, typo's , I'd be happy to receive bug reports, suggestions, and the like, through Github.
 An overview of the material covered in the book can be found in the separate document "Synge overview.pdf".
 
 \section*{Some notation conventions}
-As a rule, I followed the notation used in the book, except some which where easier to type in Latex.
+
 \begin{center}
 \begin{tabular}{ l l }
 $\dagger$& means that the exercise has only been solved partially or contains i.m.o. a doubtful step\\\\
 $\dagger \dagger$& means that the exercise has not been  solved as it should.\\\\
+$\blacklozenge$&end of an exercise or proof.\\\\
+$\lozenge$&end of Lemma or sub-task of an exercise.\\\\
+&\textbf{As a rule, I followed the notation used in the book,}\\ &\textbf{except some which where easier to type in Latex.}\\\\
 $\partial_r $ &$\equiv \pdv{}{x^r}$  \\\\
 $\partial^2_{rs}$  &$\equiv \frac{\partial^2}{\partial x^r \partial x^s}$ \\\\
 $\Gamma^r_{mn} $&$\equiv 
@@ -132,6 +142,5 @@ m n\\
 \include{chapter2}
 \include{chapter3}
 \include{chapter4}
-%\include{chapter5}
 \printbibliography %Prints bibliography
 \end{document}
