--- a/chapter6.tex
+++ b/chapter6.tex
@@ -543,7 +543,7 @@ and
 \end{array}\right.\\
 \Rightarrow \quad & \frac{E^{}_r}{\mathcal{E}_r}=A\cos \frac{2\pi c}{\lambda} t + B\sin \frac{2\pi c}{\lambda} t+i\left(C\left(z\right)\cos \frac{2\pi c}{\lambda}  t + D\left(z\right)\sin \frac{2\pi c}{\lambda}  t \right)
 \end{align}
-With $A,B,C,D:\mathbb{R}^3\rightarrow \mathbb{R}$.\\
+With $A,B,C,C:\mathbb{R}^3\rightarrow \mathbb{R}$.\\
 Let's write $E^{(0)}_r$ as $E^{(0)}_r = a+ib$ with $a, b$ real valued functions depending on the position only.
 Then, $\textbf{6.308}$ can be rewritten as
 \begin{align}
@@ -730,7 +730,7 @@ Let's first look at this with a discrete point and define
  E^{(0)}_r&= ik\epsilon_{rpq}\Pi^{(0)}_{q,p}\\
  H^{(0)}_r&= \Pi^{(0)}_{m,mr}+k^2\Pi^{(0)}_r
 \end{align}
-We check whether that Maxwell's equation in the form $\mathbf{6.356}$ are satisfied:
+We check whether that Maxwell's equation in the form $\mathbf{6.356}$ are satisfieC:
 \begin{align}
 &-ikE^{(0)}_r= \epsilon_{rmn}H^{(0)}_{n,m}\\
 \text{(1) and (2)}\quad\Rightarrow \spatie &-ikik\epsilon_{rpq}\Pi^{(0)}_{q,p}= \underbrace{\epsilon_{rmn}\Pi^{(0)}_{q,qmn}}_{=0}+\epsilon_{rmn}k^2\Pi^{(0)}_{n,m}\\
@@ -1132,7 +1132,7 @@ Curves having at each point the direction of the vorticity vector $\omega^r$ are
 \end{tcolorbox}
 \begin{figure}[H]%
     \centering
-\input{D:/MathLatex/images/fig_p235_Ex4a.tex}
+\input{D:/MathLatex/images/fig_p235_Ex4b.tex}
 \caption{Vortex line tube }
 \label{fig:fig_p2235}
 \end{figure}
